Lazy load improvement;

--- a/_posts/2017-09-05-Lazy-Load.md
+++ b/_posts/2017-09-05-Lazy-Load.md
@@ -15,7 +15,7 @@ Lazy load is an technique aims to delay loading pictures when loading the websit
 
 # Implementation
 
-## Method 1
+## Basic
 
 {% highlight html linenos %}
 <!DOCTYPE html>
@@ -62,7 +62,7 @@ Lazy load is an technique aims to delay loading pictures when loading the websit
           console.log('lazyload');
         }
       })();
-      lazyload();
+      lazyload(); // initialize
       window.addEventListener('scroll', lazyload, false);
     </script>
   </body>
@@ -77,3 +77,64 @@ Lazy load is an technique aims to delay loading pictures when loading the websit
 <br/>
 However, this method may trigger `scroll` event a lot of times, causing performance issue.
 ![loading5]({{ site.url }}/assets/images/lazyload/5.png)
+
+
+## Imporvement by Using throttle
+
+When the function is bind to `scroll` event, the function will be called very often. Therefore we can use throttle to deal with this problem.
+
+[Details of throttle and debounce](https://medium.com/@_jh3y/throttling-and-debouncing-in-javascript-b01cad5c8edf)
+
+Code modified after using throttle
+
+{% highlight javascript linenos %}
+
+  const throttle = (func, limit) => {
+    let inThrottle = false;
+    let lastFunc = null;
+    let lastRun = 0;
+    return function() {
+      let context = this;
+      let args = arguments;
+
+      if (!inThrottle) {
+        func.apply(context, args);
+        lastRun = Date.now();
+        inThrottle = true;
+      } else {
+        clearTimeout(lastFunc);
+        lastFunc = setTimeout(function() {
+          if ((Date.now() - lastRun) >= limit) {
+            func.apply(context, args);
+            lastRun = Date.now();
+          }
+        }, limit - (Date.now() - lastRun))
+      }
+    }
+  }
+  const lazyload = (function() {
+    let images = document.getElementsByTagName('img');
+    let len = images.length;
+    let cur = 0; // save the index of the lattest loaded image
+    return () => {
+      // get the offset of scroll bar
+      let scrollTop = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop;
+      // get the size of viewport
+      let viewportSize = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight;
+      for (let i = cur; i < len; ++i) {
+        if (images[i].offsetTop < scrollTop + viewportSize) {
+          // if image is in the viewport, then replace src with data-src
+          images[i].src = (images[i].dataset && images[i].dataset.src) || images[i].getAttribute('data-src');
+          ++cur;
+        }
+      }
+      console.log('lazyload');
+    }
+  })();
+  lazyload(); // initialize
+  window.addEventListener('scroll', throttle(lazyload, 1000), false);
+
+{% endhighlight %}
+
+When scroll to the third picture, `lazyload` function is called for much less times.
+![loading6]({{ site.url }}/assets/images/lazyload/6.png)
