--- a/_posts/2017-09-05-LeetCode-256-265.md
+++ b/_posts/2017-09-05-LeetCode-256-265.md
@@ -5,8 +5,8 @@ categories:
  - LeetCode
  - Dynamic Programming
 tags:
- - js
- - performance
+ - LeetCode
+ - Dynamic Programming
 ---
 
 # LeetCode 256 Paint House I
@@ -56,7 +56,7 @@ var minCost = function(costs) {
 };
 {% endhighlight %}
 
-Time: O(n); Space: O(1);
+Time: O(n); <br />Space: O(1);
 
 
 # LeetCode 256 Paint House II
@@ -144,6 +144,6 @@ var minCostII = function(costs) {
 };
 {% endhighlight %}
 
-Time: O(kn); Space: O(1);
+Time: O(kn); <br />Space: O(1);
 
 
