--- a/_posts/2017-09-12-LeetCode-269.md
+++ b/_posts/2017-09-12-LeetCode-269.md
@@ -90,7 +90,7 @@ string alienOrder(vector<string>& words) {
 }
 {% endhighlight %}
 
-JavaScript Solution
+## JavaScript Solution
 {% highlight javascript linenos %}
 /**
  * @param {string[]} words
